# Hybrid-Sorting-Optimization

./: .gitignore  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile  Makefile  README.md  all_partitions.sh  cluster  eval_requirements.txt  evaluate  evaluate.ipynb  evaluate.py  evaluate_partitions.ipynb  evalute_partitions.ipynb  exclude-file.txt  grafana-vis.sh  job-singularity.sbatch  job.sbatch  job.sh  jobs.sbatch  playbook.yml  pyproject.toml  requirements.txt  run_job.py  run_job.sh
docs/: CMakeLists.txt  Doxyfile.in  Makefile  libcpp.md  outline.org  references.bib  report.tex
docs/poster/: .latexmkrc  Makefile  beamercolorthemecam.sty  poster.tex
docs/tech-talk/: .latexmkrc  Makefile  alignmenttricks.c  include.c  presentation.tex
evaluator/: 00-psql_dump.sql  01-import-csv-to-db.sh  Dockerfile  __init__.py  __main__.py  boxplots.py  debug.py  docker-compose.yml  gb.py  gb_layout.py  gb_loader.py  generics.py  layout.py  loader.py  mpl.py  qst.py  qst_layout.py  qst_loader.py  qst_mpl.py  threshold_callback.js
playbooks/: cleanup.yml  deploy.yml  fetch_results.yml
qstpy/: __init__.py  qst.py
src/: .clangformat  .gitignore  .project  Makefile  README.md  arcc.py  config.h.in  data.cpp  data.py  evaluate.py  evaluation.py  exp.hpp  info.py  ins_sort.s  io.cpp  io.hpp  jobs.py  main.cpp  platform.hpp  qsort_asm.s  qsort_c.c  qsort_c.cpp  qsort_c_improved.c  qsort_c_improved.cpp  run_job.py  settings.gradle  sort.c  sort.cpp  sort.h  sort.hpp  utils.cpp  utils.hpp
src/app/: build.gradle
src/app/src/main/java/qst/java/: App.java  Benchmark.java  DualPivotQuicksort.java  Input.java  QST.java
src/app/src/test/java/qst/java/: AppTest.java  QSTTest.java
src/c/: Makefile  README.md  alphadev.c  alphadev.h  asm_sort.c  asm_sort.h  benchmark.c  benchmark.h  data.c  data.h  main.c  msort_opt.c  platform.c  platform.h  sort.c  sort.h  sort_cxx.cpp  sort_cxx.h  tests.c  tests.cpp  tests.hpp
src/c/alphadev/: alphadev.c  alphadev.h  main.c
src/c/patches/: 0001-stdlib-Improve-qsort-performance.patch
src/gb/: benchmark.cpp  benchmark.hpp  gb_jobs.py  gb_main.cpp
src/java/: .gitattributes  Makefile
src/java/app/: build.gradle
src/java/app/src/main/java/qst/java/: Benchmark.java  DualPivotQuicksort.java
src/python/: QST-py
tests/: test_data.py
