[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "qst"
description = "A small abstraction to call the QST subprocess from Python"
readme = "README.md"
requires-python = ">=3.9"
authors = [{ name = "Joshua Arulsamy", email = "jarulsam@uwyo.edu" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: System :: Archiving",
]
dependencies = []
dynamic = ["version"]

[tool.setuptools]
packages = ["qstpy"]

[tool.setuptools.dynamic]
version = { attr = "qstpy.__version__" }
